Fix chord intervals and update button labels to standard notation

--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                     <div class="answer-section" id="akkord-answer-section" style="display: none;">
                         <h3>Welchen Akkord hörst du?</h3>
                         <div class="button-grid">
-                            <button class="answer-btn" onclick="checkAkkord('Dur (Grundstellung)')">Dur (Grundstellung)</button>
-                            <button class="answer-btn" onclick="checkAkkord('Dur mit großer Septime')">Dur mit großer Septime</button>
-                            <button class="answer-btn" onclick="checkAkkord('Dur mit kleiner Septime')">Dur mit kleiner Septime</button>
-                            <button class="answer-btn" onclick="checkAkkord('Dur mit Sexte')">Dur mit Sexte</button>
-                            <button class="answer-btn" onclick="checkAkkord('Moll (Grundstellung)')">Moll (Grundstellung)</button>
-                            <button class="answer-btn" onclick="checkAkkord('Moll mit kleiner Septime')">Moll mit kleiner Septime</button>
-                            <button class="answer-btn" onclick="checkAkkord('Moll mit Sexte')">Moll mit Sexte</button>
+                            <button class="answer-btn" onclick="checkAkkord('Dur8')">Dur8</button>
+                            <button class="answer-btn" onclick="checkAkkord('Dmaj7')">Dmaj7</button>
+                            <button class="answer-btn" onclick="checkAkkord('D7')">D7</button>
+                            <button class="answer-btn" onclick="checkAkkord('D56')">D56</button>
+                            <button class="answer-btn" onclick="checkAkkord('Moll8')">Moll8</button>
+                            <button class="answer-btn" onclick="checkAkkord('Moll7')">Moll7</button>
+                            <button class="answer-btn" onclick="checkAkkord('Moll56')">Moll56</button>
                             <button class="answer-btn" onclick="checkAkkord('Vermindert')">Vermindert</button>
                             <button class="answer-btn" onclick="checkAkkord('Übermäßig')">Übermäßig</button>
                         </div>
