Add Continue buttons to Melodie and Rhythmus UI

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                     <div id="notation-melodie" class="notation-display"></div>
                     
                     <div class="controls">
-                        <button class="btn-primary" id="play-melodie" onclick="playMelodie()">▶ Abspielen</button>
-                        <button class="btn-secondary" id="replay-melodie" onclick="playMelodie()" disabled>🔄 Wiederholen</button>
+                        <button class="btn-primary" id="play-melodie" onclick="playMelodie()">▶ Start (alle 4 Takte)</button>
+                        <button class="btn-primary" id="continue-melodie" onclick="continueMelodie()" style="display: none;">Weiter ▶</button>
                     </div>
 
                     <div class="answer-section">
@@ -192,8 +192,8 @@
                     <div id="notation-rhythmus" class="notation-display"></div>
                     
                     <div class="controls">
-                        <button class="btn-primary" id="play-rhythmus" onclick="playRhythmus()">▶ Abspielen</button>
-                        <button class="btn-secondary" id="replay-rhythmus" onclick="playRhythmus()" disabled>🔄 Wiederholen</button>
+                        <button class="btn-primary" id="play-rhythmus" onclick="playRhythmus()">▶ Start (alle 4 Takte)</button>
+                        <button class="btn-primary" id="continue-rhythmus" onclick="continueRhythmus()" style="display: none;">Weiter ▶</button>
                     </div>
 
                     <div class="answer-section">
