Update footer copyright information

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
     <!-- Footer with copyright -->
     <footer style="text-align: center; padding: 20px; margin-top: 50px; color: var(--text-secondary); font-size: 0.85em; border-top: 1px solid var(--border-color);">
-        <p>© 2026 Polizei1234 - Alle Rechte vorbehalten</p>
+        <p>© 2026 Jannik Herre - Alle Rechte vorbehalten</p>
         <p style="margin-top: 5px;">
             Piano-Samples: <a href="https://github.com/gleitz/midi-js-soundfonts" target="_blank" rel="noopener" style="color: var(--primary-color);">MIDI.js Soundfonts</a> (Acoustic Grand Piano)
         </p>
