Update footer copyright information

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
     <!-- Footer -->
     <footer>
-        <p><strong>© 2026 Polizei1234</strong> • Alle Rechte vorbehalten</p>
+        <p><strong>© 2026 Jannik Herre</strong> • Alle Rechte vorbehalten</p>
         <p style="margin-top: 0.5rem;">
             Piano-Samples: <a href="https://github.com/gleitz/midi-js-soundfonts" target="_blank" rel="noopener">MIDI.js Soundfonts</a> (Acoustic Grand Piano)
         </p>
