--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button class="nav-btn active" data-section="intervalle">Intervalle</button>
         <button class="nav-btn" data-section="akkorde">Akkorde</button>
         <button class="nav-btn" data-section="rhythmus">Rhythmusdiktat</button>
+        <button class="nav-btn" data-section="melodie">Melodiediktat</button>
     </nav>
 
     <main>
@@ -123,6 +124,31 @@
                 <p>Geübt: <span id="rhythmus-total">0</span></p>
             </div>
         </section>
+
+        <!-- Melodie Section -->
+        <section id="melodie-section" class="exercise-section">
+            <h2>Melodiediktat</h2>
+            <p class="description">4 Takte im 4/4-Takt mit Kadenz. Leitereigene Töne. Ambitus über 1 Oktave.</p>
+            <p id="melodie-info" style="text-align: center; color: #7f8c8d; margin-bottom: 1rem;">Tonart wird beim Start angezeigt</p>
+            
+            <div class="controls">
+                <button id="play-melodie" class="btn btn-primary">▶ Abspielen (Kadenz + 1-4)</button>
+                <button id="continue-melodie" class="btn" style="display: none;">▶ Weiter</button>
+            </div>
+
+            <div id="notation-melodie" class="notation"></div>
+
+            <div id="melodie-feedback" class="feedback"></div>
+            
+            <div class="controls">
+                <button id="show-melodie-solution" class="btn" onclick="showMelodieSolution()" style="display: none;">Lösung anzeigen</button>
+                <button id="next-melodie" class="btn btn-secondary" onclick="nextMelodie()" style="display: none;">Neue Melodie</button>
+            </div>
+
+            <div class="stats">
+                <p>Geübt: <span id="melodie-total">0</span></p>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -135,6 +161,7 @@
     <script src="js/intervalle-tonejs.js"></script>
     <script src="js/akkorde-tonejs.js"></script>
     <script src="js/rhythmus-tonejs.js"></script>
+    <script src="js/melodie-tonejs.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
