Add onclick attributes to melody buttons for direct function calls

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
             <p class="description">4 Takte im 4/4-Takt. Tempo: Viertel = 60 BPM. Nach offiziellen BW-Rhythmus-Bausteinen.</p>
             
             <div class="controls">
-                <button id="play-rhythmus" class="btn btn-primary">▶ Abspielen (1-4)</button>
-                <button id="continue-rhythmus" class="btn" style="display: none;">▶ Weiter</button>
+                <button id="play-rhythmus" class="btn btn-primary" onclick="playRhythmus()">▶ Abspielen (1-4)</button>
+                <button id="continue-rhythmus" class="btn" onclick="continueRhythmus()" style="display: none;">▶ Weiter</button>
             </div>
 
             <div id="notation-rhythmus" class="notation"></div>
@@ -132,8 +132,8 @@
             <p id="melodie-info" style="text-align: center; color: #7f8c8d; margin-bottom: 1rem;">Tonart wird beim Start angezeigt</p>
             
             <div class="controls">
-                <button id="play-melodie" class="btn btn-primary">▶ Abspielen (Kadenz + 1-4)</button>
-                <button id="continue-melodie" class="btn" style="display: none;">▶ Weiter</button>
+                <button id="play-melodie" class="btn btn-primary" onclick="playMelodie()">▶ Abspielen (Kadenz + 1-4)</button>
+                <button id="continue-melodie" class="btn" onclick="continueMelodie()" style="display: none;">▶ Weiter</button>
             </div>
 
             <div id="notation-melodie" class="notation"></div>
