Fix next button color back to gray and add creator name to footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div id="intervall-feedback" class="feedback"></div>
             
             <div class="controls">
-                <button id="next-intervall" class="btn btn-primary" onclick="nextIntervall()" style="display: none;">Nächstes Intervall ▶</button>
+                <button id="next-intervall" class="btn btn-secondary" onclick="nextIntervall()" style="display: none;">Nächstes Intervall ▶</button>
             </div>
 
             <div class="stats">
@@ -95,7 +95,7 @@
             <div id="akkord-feedback" class="feedback"></div>
             
             <div class="controls">
-                <button id="next-akkord" class="btn btn-primary" onclick="nextAkkord()" style="display: none;">Nächster Akkord ▶</button>
+                <button id="next-akkord" class="btn btn-secondary" onclick="nextAkkord()" style="display: none;">Nächster Akkord ▶</button>
             </div>
 
             <div class="stats">
@@ -154,7 +154,8 @@
     </main>
 
     <footer>
-        <p>© 2026 Musik Fachpraktisch Gehörbildungstrainer – Viel Erfolg beim Üben! 🎶</p>
+        <p>© 2026 Jannik Herre – Musik Fachpraktisch Gehörbildungstrainer</p>
+        <p>Viel Erfolg beim Üben! 🎶</p>
     </footer>
 
     <!-- Load scripts in order -->
